# -0927

./: .env  .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  .pyscn.toml  .uvrc  .vulturerc  AGENTS.md  ANSWER_TO_YOUR_QUESTIONS.md  AUDIT_DOCS_INDEX.md  AUDIT_RESPONSE.md  AUDIT_SUMMARY.txt  BACKTEST_1000_COMBINATIONS_REPORT.md  BACKTEST_12FACTORS_COMPARISON_REPORT.md  BACKTEST_50K_COMPLETION.txt  BASELINE_BREAKTHROUGH_STRATEGY.md  CHANGELOG.md  CLAUDE.md  CLEANUP_ACTION_PLAN.md  CLEANUP_COMPLETE.md  CLEANUP_COMPLETION_REPORT.txt  CLEANUP_EXECUTION_GUIDE.md  CLEANUP_EXECUTION_REPORT.md  CLEANUP_REPORT.md  CLEANUP_SUMMARY.md  CLEANUP_VERIFICATION.md  CODE_AUDIT_REPORT.md  CODE_CLEANUP_REPORT.md  COMPLETE_BACKTEST_EVOLUTION_REPORT.md  COMPREHENSIVE_CODE_QUALITY_ANALYSIS_REPORT.md  COMPREHENSIVE_SYSTEM_ANALYSIS_REPORT.md  CORRECT_APPROACH.md  CRITICAL_ISSUES_REPORT.md  DEAD_CODE_CANDIDATES.md  DELIVERY_CHECKLIST.md  ETF_DATA_UPDATE_GUIDE.md  ETF_DIVIDEND_ANALYSIS.md  ETF_FACTOR_SYSTEM_GUIDE.md  ETF_FULL_WORKFLOW_VALIDATION_REPORT.md  (+160 more)
etf_rotation_optimized/: .gitignore  BRUTAL_TRUTH_REPORT.md  BRUTAL_TRUTH_SUMMARY_CN.md  BUG_FIX_COMPLETE.md  CACHE_CLEAR_VERIFICATION_REPORT.md  CLEANUP_REPORT.md  CODE_REVIEW_AND_FIX_REPORT.md  COMPREHENSIVE_SYSTEM_AUDIT.md  CONFIG_AUDIT_REPORT.md  CORE_ALGORITHMS.md  DIAGNOSIS_REPORT_昨今差异.md  ENSEMBLE_WFO_IMPLEMENTATION_PLAN.md  EVENT_DRIVEN_TRADING_GUIDE.md  EXECUTION_RECORD_20251028.md  FIX_REPORT_确定性修复.md  HISTORICAL_BEST_VS_TODAY_COMPARISON.md  Makefile  NUMBA_JIT_FINAL_REPORT.md  P0_FIX_RESULT_ANALYSIS.md  PROJECT_ARCHITECTURE.md  PROJECT_AUDIT_REPORT.md  PROJECT_AUDIT_TODO.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  QUICK_FIX_SUMMARY.txt  QUICK_TEST_GUIDE.md  README.md  ROOT_CAUSE_DIAGNOSIS.md  ROOT_CAUSE_EXECUTIVE_SUMMARY.md  ROOT_CAUSE_FINAL_DIAGNOSIS.md  STEP_BY_STEP_CREATION_REPORT.md  STEP_BY_STEP_EXECUTION_REPORT.md  USAGE_EXAMPLE.py  WFO_SCIENCE_ANALYSIS.md  additional_cleanup.sh  analyze_18_factors.py  analyze_18_factors_simple.py  benchmark_jit_vs_python.py  cleanup_legacy.sh  debug_wfo_structure.py  (+8 more)
etf_rotation_optimized/.legacy_backup_20251103_144732/: PORTFOLIO_CONSTRUCTOR_FIX.md  backtest_config_event.yaml  event_driven_portfolio.py  pipeline_config_wfo_test.yaml  run_full_wfo_real_data.sh  run_wfo_validation.sh  test_portfolio_fix.py
etf_rotation_optimized/configs/: FACTOR_SELECTION_CONSTRAINTS.backup_A_opt.yaml  FACTOR_SELECTION_CONSTRAINTS.backup_C.yaml  FACTOR_SELECTION_CONSTRAINTS.backup_C_opt.yaml  FACTOR_SELECTION_CONSTRAINTS.backup_exp10.yaml  FACTOR_SELECTION_CONSTRAINTS.backup_exp11.yaml  FACTOR_SELECTION_CONSTRAINTS.backup_exp8.yaml  FACTOR_SELECTION_CONSTRAINTS.backup_exp9.yaml  FACTOR_SELECTION_CONSTRAINTS.backup_exp_baseline.yaml  FACTOR_SELECTION_CONSTRAINTS.yaml  FACTOR_SELECTION_CONSTRAINTS_B.yaml  MARKET_REGIME_DETECTOR.yaml  ab_test_a.yaml  ab_test_b.yaml  ab_test_factor_count.yaml  combo_wfo_config.yaml  config.yaml  default.yaml  wfo_grid.yaml  wfo_grid_test.yaml
etf_rotation_optimized/core/: __init__.py  combo_wfo_optimizer.py  constants.py  constrained_walk_forward_optimizer.py  cross_section_processor.py  data_validator.py  direct_factor_wfo_optimizer.py  ensemble_sampler.py  ensemble_wfo_optimizer.py  event_driven_portfolio_constructor.py  factor_aggregator.py  factor_selector.py  factor_weighting.py  ic_calculator.py  ic_calculator_numba.py  market_regime_detector.py  performance_monitor.py  pipeline.py  portfolio_constructor.py  precise_factor_library.py  precise_factor_library_v2.py  trading_cost_model.py  walk_forward_optimizer.py  wfo_metadata_writer.py  wfo_multi_strategy_selector.py  wfo_parallel_enumerator.py  wfo_performance_evaluator_basic.py  wfo_strategy_evaluator.py  wfo_strategy_ranker.py
etf_rotation_optimized/docs/: 8D_WFO_EXECUTION_SUMMARY.md  8D_WFO_PIPELINE_MANUAL.md  DEPLOYMENT.md  ETF_ROTATION_PRODUCTION_READINESS_WORKFLOW.md  FACTOR_HEALTH_MONITORING.md  FULL_BACKTEST_PLAN.md  INDEX.md  OPERATIONS.md  OUTPUT_SCHEMA.md  PROJECT_GUIDELINES.md  PROJECT_OVERVIEW.md  QUICK_START_GUIDE.md  README.md  WFO_CALIBRATION_REPORT.md  WFO_EXPERIMENTS_GUIDE.md  test_with_marker.md
etf_rotation_optimized/real_backtest/: README.md  monitor_progress.sh  run_position_grid_search.py  run_production_backtest.py  run_top5_ensemble.py
etf_rotation_optimized/results_combo_wfo/: REPORT.md  未来函数排查与修复完整报告.md
etf_rotation_optimized/scripts/: analyze_factor_stability.py  analyze_negative_ic_windows.py  analyze_top5000_consistency.py  apply_experiment_config.py  compare_ab_results.py  compare_matrix_results.py  compare_runs.py  compute_wfo_backtest_metrics.py  final_comparison.py  generate_portfolio_daily_curve.py  quick_robustness_check.py  run_matrix_experiments.sh  run_remaining_exps.py  run_standard_real_backtest.py  run_topn_sensitivity.py  select_topk_candidates.py  standard_real_data_loader.py  step1_cross_section.py  step2_factor_selection.py  step3_ensemble_wfo.py  step3_run_wfo.py  step4_backtest_1000_combinations.py  train_calibrator_full.py  wfo_experiments.py
etf_rotation_optimized/tests/: test_constrained_walk_forward_optimizer.py  test_cross_section_processor.py  test_data_contract.py  test_data_loader_config.py  test_data_validator.py  test_direct_factor_wfo.py  test_end_to_end.py  test_ensemble_sampler.py  test_ensemble_wfo.py  test_factor_aggregator.py  test_factor_selector.py  test_factor_selector_determinism.py  test_factor_weighting.py  test_ic_calculator.py  test_numba_jit.py  test_optimized_system.py  test_performance_optimizations.py  test_precise_factor_library.py  test_precise_factor_library_v2.py  test_score_function_fix.py  test_step3_integration.py  test_system.py  test_walk_forward_optimizer.py  test_wfo_multi_strategy_selector.py  test_wfo_parallel_enumerator.py  verify_determinism.py
etf_rotation_optimized/utils/: factor_cache.py  generate_direct_wfo_report.py
etf_rotation_optimized/validation_scripts/: INDEX.md  README.md  README_AI.md  README_FULL.md  START_HERE.md  SUMMARY.md  analyze_zero_usage_factors.py  evaluate_candidate_factors.py  (+3 more)
(+2671 files in other folders)
