[project]
name = "quant-trading"
version = "0.1.0"
description = "量化交易开发环境"
requires-python = ">=3.11"

# 核心依赖（必须安装）
dependencies = [
    # 核心量化回测引擎
    "vectorbt>=0.28.1",
    # 数据处理框架
    "pandas>=2.3.2",
    "numpy>=2.3.3",
    # 科学计算库
    "scipy>=1.16.2",
    "scikit-learn>=1.7.2",
    # 技术分析库
    "ta-lib>=0.6.7",
    # 金融数据接口
    "yfinance>=0.2.66",
    # 数据存储与处理
    "pyarrow>=21.0.0",
    "fastparquet>=2024.11.0",
    # 并行计算与缓存
    "joblib>=1.5.2",
    # HTTP请求库
    "requests>=2.32.0",
    # 环境变量管理
    "python-dotenv>=1.0.0",
    # 统计模型（VIF计算需要）
    "statsmodels>=0.14.0",
    # YAML配置文件支持
    "pyyaml>=6.0.0",
    "seaborn>=0.13.2",
    "mplfinance>=0.12.10b0",
    "polars>=1.33.1",
    "numba>=0.62.0",
    "pandas-vet>=2023.8.2",
    "httpx[socks]>=0.28.1",
]

# 可选依赖（按需安装）
[project.optional-dependencies]
# 性能优化
performance = [
    "polars>=1.0.0",
    "numba>=0.60.0",
]

# 可视化
visualization = [
    "matplotlib>=3.10.6",
    "mplfinance>=0.12.10b0",
    "plotly>=5.24.0",
    "seaborn>=0.13.2",
]

# Web界面
web = [
    "dash>=2.18.0",
    "beautifulsoup4>=4.13.5",
]

# 数据库
database = [
    "sqlalchemy>=2.0.0",
    "redis>=5.0.0",
]

# 任务调度
scheduling = [
    "schedule>=1.2.0",
]

# 开发工具 - Linus模式精选
dev = [
    # 核心质量工具 (必需)
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "black>=25.9.0",
    "isort>=6.0.1",
    "mypy>=1.18.2",
    "flake8>=7.3.0",

    # 安全工具 (量化系统必需)
    "bandit>=1.8.6",
    "safety>=3.6.2",

    # 性能分析工具 (量化核心)
    "line-profiler>=5.0.0",
    "memory-profiler>=0.61.0",

    # 量化专用工具
    "pandas-vet>=2023.8.2",
    "vulture>=2.14",

    # 自动化工具
    "pre-commit>=4.3.0",

    # 开发辅助
    "ipython>=9.5.0",
    "jupyterlab>=4.4.9",
    "notebook>=7.3.0",
]

# 完整安装（包含所有可选依赖）
all = [
    "quant-trading[performance,visualization,web,database,scheduling,dev]"
]

[project.urls]
Homepage = "https://github.com/yourusername/quant-trading"
Repository = "https://github.com/yourusername/quant-trading.git"
Documentation = "https://quant-trading.readthedocs.io"
"Bug Tracker" = "https://github.com/yourusername/quant-trading/issues"

[project.scripts]
quant-backtest = "quant.cli:backtest"
quant-data = "quant.cli:data_fetcher"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/conftest.py",
    "*/setup.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[dependency-groups]
dev = [
    "bandit>=1.8.6",
    "black>=25.9.0",
    "flake8>=7.3.0",
    "isort>=6.0.1",
    "line-profiler>=5.0.0",
    "memory-profiler>=0.61.0",
    "mypy>=1.18.2",
    "pandas-stubs>=2.3.2.250926",
    "pandas-vet>=2023.8.2",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "ruff>=0.13.2",
    "safety>=3.6.2",
    "scipy-stubs>=1.16.2.0",
    "types-psutil>=7.0.0.20251001",
    "types-pyyaml>=6.0.12.20250915",
    "types-seaborn>=0.13.2.20250914",
    "vulture>=2.14",
]
